# interview-sys

./: .env.example  .gitignore  AGENTS.md  Makefile  README.en.md  README.md  ai-interview-backend-plan.md  ai-interview-roadmap.md  docker-compose.yml  go.mod  go.sum  project-reference-map.md
.github/workflows/: ci.yml  docker.yml  integration-smoke.yml  performance.yml  quality.yml
cmd/api/: main.go
cmd/worker/: main.go
docs/: dead-letter-analysis.md  deployment.md  evaluation-harness.md  frontend-workbench.md  go-python-responsibilities.md  language-boundaries.md  python-runtime.md  reference-implementation-notes.md  reference-projects.md  roadmap.md  skill-design-notes.md
frontend/: index.html  oj-completion-profile.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: generate-oj-completion-index.mjs  test-oj-completion-index.mjs
frontend/src/: api.ts  design-system.css  i18n.ts  main.ts  styles.css
internal/app/: app.go
internal/auth/: service.go  service_test.go
internal/coding/: completion.go  completion_catalog.json  completion_test.go  docker_evaluator.go  docker_evaluator_test.go  (+8 more)
migrations/: 001_init.sql  002_seed_defaults.sql
python-runtime/: AGENTS.md  Dockerfile  pyproject.toml
python-runtime/app/: __init__.py  config.py  main.py  memory.py  models.py  prompt_security.py  providers.py  structured_output.py  tasks.py
python-runtime/tests/: test_memory.py  test_prompt_security.py  test_structured_output.py
scripts/: bootstrap.ps1  bootstrap.sh  check-middleware.sh  init-db.sh  pull-judge-images.sh
(+58 files in other folders)
